LLD/Educative/DesigningAirlineManagementSystem/Code/MyCode/Airline-Management-System/k8s/reservation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  namespace: prod
spec:
  replicas: 3 # High Availability
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
      annotations:
        prometheus.io/scrape: "true" # For Observability
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: reservation-service
          image: airline-mgmt/reservation-service:latest
          ports:
            - containerPort: 8080
          resources: # Scalability & Resource Protection
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
