LLD/Educative/DesigningAirlineManagementSystem/Code/MyCode/Airline-Management-System/k8s/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reservation-retry-policy
spec:
  hosts:
    - reservation-service
  http:
    - route:
        - destination:
            host: reservation-service
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream
